unpackaged/main/default/objects/Case/fields/Date_Due__c.field-meta.xml
<CustomField>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </CustomField>